fix font size on mobile devices

--- a/styles/input.css
+++ b/styles/input.css
@@ -4,10 +4,10 @@
 
 @layer base {
 h2 {
-    @apply no-underline text-5xl w-full content-center font-black font-headerFont;
+    @apply no-underline text-3xl md:text-5xl w-full content-center font-black font-headerFont;
 }
 h1, h3 {
-    @apply text-5xl flex content-center w-full font-black underline font-headerFont;
+    @apply text-3xl md:text-5xl flex content-center w-full font-black underline font-headerFont;
 }
 .button {
     @apply p-4 bg-[#3cbe61] dark:bg-[#4cc98a] rounded-3xl w-40 cursor-pointer font-black;
